<resources>
    <string name="app_name">MySimpleNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_note">Your note...</string>
    <string name="recycler_item_note">Recycler Item Note</string>
    <string name="date_dummy">28-11-2022 14:55:21</string>
    <string name="note_text">note text</string>
    <string name="recycler_item_task">Recycler Item Task</string>
    <string name="priority_image">priority image</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="title">Title...</string>
    <string name="low_priority">Low priority</string>
    <string name="medium_priority">Medium priority</string>
    <string name="high_priority">High priority</string>
    <string name="new_task">New task...</string>
    <string name="plus">+</string>
</resources>